feat(backend): complete trip planning and ai integration core